# prior-auth-triage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
data/: crosswalk.json  policy.json
data/samples/: 01_approve_clean.json  02_deny_exclusion.json  03_pend_missing_info.json  04_prior_auth_required.json  05_deny_not_covered.json
src/pa_triage/: __init__.py  config.py  crosswalk.py  demo_llm.py  graph.py  llm.py  logging_utils.py  pipeline.py  policy.py
src/pa_triage/agents/: __init__.py  clinical.py  coverage.py  decision.py  intake.py
src/pa_triage/models/: __init__.py  domain.py  fhir.py  state.py
tests/: conftest.py  test_clinical.py  test_coverage.py  test_crosswalk.py  test_decision.py  test_graph_e2e.py  test_intake.py  test_policy.py
tests/fixtures/: mock_llm.py
