[project]
name = "pa-triage"
version = "0.1.0"
description = "Multi-agent prior-authorization triage over synthetic FHIR R4 bundles (portfolio PoC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "streamlit>=1.36",
    # Transitive via google-auth. Capped because cryptography 49.x lacks a
    # prebuilt x86_64 macOS wheel here, which would force a from-source build.
    "cryptography<49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# `cryptography` (a transitive dep via google-auth) ships prebuilt wheels, but
# its newest release may lack a wheel for some macOS/x86_64 setups, where uv
# would otherwise try to compile it from source (needs Rust + OpenSSL) and fail.
# Restrict it to wheels only so uv resolves to the newest version that has one.
no-build-package = ["cryptography"]

[tool.hatch.build.targets.wheel]
packages = ["src/pa_triage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
